--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
 <!content goes here>
+Something Something.
 <title>Title</title>
 </head>
 
 <body>
 <!"">
-go away
+Go away.
 </body>
 </html>
