--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 Something something.
 <title>Title</title>
 </head>
-
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 <body>
 <!"">
 Go away.
+<img src = "https://orig00.deviantart.net/804d/f/2014/213/3/5/gnar_by_kiraririnkan-d7tb84w.png" width=250px>
 </body>
 </html>
